# omega-five

./: .gitignore  CMakeLists.txt  bitboard.cpp  bitboard.hpp  common.hpp  debug.cpp  debug.hpp  evaluation.cpp  interface.hpp  main.cpp  main.hpp  pattern.hpp  search.cpp  search.hpp  test.cpp  test.hpp  unit_test.cpp
include/omega-five/: bitboard.hpp  board.hpp  common.hpp  evaluation.hpp  main.hpp  move.hpp
include/omega-five/nnue/: nnue.hpp
nnue/: weights.nnue
nnue/tools/: grid_search.py
nnue/tools/utils/: cross_validation.py  dataset.py  loss.py  model.py
src/: bitboard.cpp  board.cpp  interface.cpp  main.cpp  move.cpp  search.cpp
src/nnue/: nnue.cpp
tests/: test.cpp  unit_test.cpp  unit_test.hpp
